fixed text wrapping

--- a/src/main/resources/public/styles/roll.css
+++ b/src/main/resources/public/styles/roll.css
@@ -3,3 +3,7 @@
     flex-direction: column;
     align-items: center;
 }
+
+pre {
+    white-space: normal;
+}
